--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -111,9 +111,7 @@ int main()
  |   |   |   └─ address_space_update_ioeventfds(as)   
  |   |   |
  |   |   ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
- |   |   ├─ address_space_init(&address_space_io, system_io, "I/O");   // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
- |   |   └─ memory_listener_register() // 注册 core_memory_listener、io_memory_listener
- |   |       └─ listener_add_address_space()
+ |   |   └─ address_space_init(&address_space_io, system_io, "I/O");   // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
  |   |
  |   └─ io_mem_init()                  // 初始化 I/O MemoryRegion
  |       └─ memory_region_init_io()    // ram/rom/unassigned/notdirty/subpage-ram/watch
